# SimpleBeast

./: CMakeLists.txt  Doxyfile  LICENSE  README.md
app/: CMakeLists.txt
app/include/: handle_request.hpp  http_session.h  http_session.hpp  listener.h  misc.hpp  websocket_session.h  websocket_session.hpp
app/src/: http_session.cpp  listener.cpp  main.cpp  misc.cpp  websocket_session.cpp
test/: Makefile
test/unit-tests/: Makefile
test/unit-tests/src/: Makefile
